# eps-workflow-dependabot

./: .tool-versions  Makefile  README.md  combine-prs.js  pyproject.toml  sonar-project.properties
.devcontainer/: Dockerfile
.github/: dependabot.yml
.github/scripts/: check_asdf_update.sh  check_tool_update.sh  update_asdf_version.sh  update_tool_version.sh
.github/workflows/: combine-dependabot-prs.yml  dependabot-auto-approve-and-merge.yml  pull_request.yml  release.yml  update-tool-versions.yml
