[project]
python = "3.14.0"
name = "eps-FHIR-validator-lambda"

[tool.poetry]
version = "0.0.1-alpha"
package-mode = false
description = "lambda for Validation Service FHIR R4 API Definitions"
license = "MIT"
authors = [
    "EPS"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/eps-FHIR-validator-lambda"

[tool.poetry.dependencies]
python = "3.14.0"


[tool.poetry.scripts]

[build-system]
requires = ["poetry>=1.6"]
build-backend = "poetry.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.3.0,<5.0.0)"
]
