[project]
python = "3.14.0"
name = "eps-workflow-dependabot"

[tool.poetry]
version = "0.0.1-alpha"
package-mode = false
description = "Common workflows for dependabot"
license = "MIT"
authors = [
    "EPS"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/eps-workflow-dependabot"

[tool.poetry.dependencies]
python = "3.14.0"


[tool.poetry.scripts]

[build-system]
requires = ["poetry>=1.6"]
build-backend = "poetry.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.3.0,<5.0.0)"
]
